--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b760d7f11ca1d623b11d",
+    "/css/app.css": "/css/app.css?id=69d6aac18e534b75484d"
 }
